Positioned items for sidebar and header

--- a/index.html
+++ b/index.html
@@ -9,38 +9,70 @@
 <body>
     <div class="main-container">
         <div class="container-child1 sidebar">
-            <div class="sidebar-column-left">
-                <div class="icons">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </div>
+            <div class="title">
+                <div class="icon">#</div>
+                <h5>Dashboard</h5>
             </div>
-            <div class="sidebar-column-right">
-                <div class="title">
-                    <h4>Dashboard</h4>
+            <div class="navigation">
+                <div class="icon">
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
                 </div>
-                <div class="navigation">
+                <div class="branding">
                     <h6>Home</h6>
                     <h6>Profile</h6>
                     <h6>Messages</h6>
                     <h6>History</h6>
                     <h6>Tasks</h6>
                     <h6>Communities</h6>
+                </div>
+            </div> 
+            <div class="settings">
+                <div class="icon">
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                    <div class="icon">#</div>
+                </div>
+                <div class="branding">
                     <h6>Settings</h6>
                     <h6>Support</h6>
                     <h6>Privacy</h6>
-                </div> 
+                </div>
             </div>
         </div>
-        <div class="container-child2 header"></div>
+        <div class="container-child2 header">
+            <div class="header-child1">
+                <div class="search">
+                    <div class="search-icon">#</div> <!-- label element might be useful-->
+                    <input type="text">
+                </div>
+                <div class="small-profile">
+                    <div class="bell">#</div>
+                    <div class="small-pic">#</div>
+                    <div class="user">Rexx Alfaro</div>
+                </div>
+            </div>
+            <div class="header-child2">
+                <div class="user-info">
+                    <div class="profile-pic">#</div>
+                    <div class="user-greetings">
+                        <p>Hi there,</p>
+                        <div class="user">Rexx Alfaro (@snowfxl)</div>
+                    </div>
+                </div>
+                <div class="actions">
+                    <div class="buttons">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-child3 main-content"></div>
     </div>
 </body>
