added cards to main

--- a/index.html
+++ b/index.html
@@ -10,36 +10,46 @@
     <div class="main-container">
         <div class="container-child1 sidebar">
             <div class="title">
-                <div class="icon">#</div>
+                <div>#</div>
                 <h5>Dashboard</h5>
             </div>
             <div class="navigation">
-                <div class="icon">
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
+                <div class="branding">
+                    <div>#</div>
+                    <h6>Home</h6>
                 </div>
                 <div class="branding">
-                    <h6>Home</h6>
+                    <div>#</div>
                     <h6>Profile</h6>
+                </div>
+                <div class="branding">
+                    <div>#</div>
                     <h6>Messages</h6>
+                </div>
+                <div class="branding">
+                    <div>#</div>
                     <h6>History</h6>
+                </div>
+                <div class="branding">
+                    <div>#</div>
                     <h6>Tasks</h6>
+                </div>
+                <div class="branding">
+                    <div>#</div>
                     <h6>Communities</h6>
                 </div>
             </div> 
             <div class="settings">
-                <div class="icon">
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
-                    <div class="icon">#</div>
+                <div class="branding">
+                    <div>#</div>
+                    <h6>Settings</h6>
                 </div>
                 <div class="branding">
-                    <h6>Settings</h6>
+                    <div>#</div>
                     <h6>Support</h6>
+                </div>
+                <div class="branding">
+                    <div>#</div>
                     <h6>Privacy</h6>
                 </div>
             </div>
@@ -73,7 +83,104 @@
                 </div>
             </div>
         </div>
-        <div class="container-child3 main-content"></div>
+        <div class="container-child3 main-content">
+            <div class="tags"><p>Your Projects</p><p>Announcements</p></div>
+            <div class="contents">
+                <div class="contents-left">
+                    <div class="card1 left-card">
+                        <h6>Super Cool Project</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                    <div class="card2 left-card">
+                        <h6>Less Cool Project</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime dicta laborum porro odio sed!</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                    <div class="card4 left-card">
+                        <h6>Impossible App</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                    <div class="card5 left-card">
+                        <h6>Easy Peasy App</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                    <div class="card6 left-card">
+                        <h6>Ad Blocker</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                    <div class="card7 left-card">
+                        <h6>Money Maker</h6>
+                        <div class="card-content">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
+                            <div class="card-icons">###</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contents-right">
+                    <div class="card3 right-card"><!-- item3 -->
+                        <div class="announcements">
+                            <div>
+                                <h6>Site Maintenance</h6>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, cumque! Exercitationem, soluta aliquid.</p>
+                            </div>
+                            <div>
+                                <h6>Community Share Day</h6>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, cumque! Exercitationem, soluta aliquid.</p>
+                            </div>
+                            <div>
+                                <h6>Updated Privacy Policy</h6>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, cumque! Exercitationem, soluta aliquid.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h6 class="trending">Trending</h6>
+                    <div class="card8 right-card trending-card"><!-- item8 -->
+                        <div class="trending-items">
+                            <div class="hero">#</div>
+                            <div class="username">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <div class="hero">#</div>
+                            <div class="username">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <div class="hero">#</div>
+                            <div class="username">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <div class="hero">#</div>
+                            <div class="username">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
