Added icons, images and removed css helpers

--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
     <div class="main-container">
         <div class="container-child1 sidebar">
             <div class="title">
-                <div>#</div>
+                <div><img src="logo.jpeg" alt="La Calle Filipina logo"></div>
                 <h5>Dashboard</h5>
             </div>
             <div class="navigation">
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="home-account.svg" alt="home icon"></div>
                     <h6>Home</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="profile.svg" alt="profile icon"></div>
                     <h6>Profile</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="message-reply-outline.svg" alt="message icon"></div>
                     <h6>Messages</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="history.svg" alt="history icon"></div>
                     <h6>History</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="file-multiple.svg" alt="tasks icon"></div>
                     <h6>Tasks</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="account-group.svg" alt="communities icon"></div>
                     <h6>Communities</h6>
                 </div>
             </div> 
             <div class="settings">
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="cog.svg" alt="settings icon"></div>
                     <h6>Settings</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="help.svg" alt="support icon"></div>
                     <h6>Support</h6>
                 </div>
                 <div class="branding">
-                    <div>#</div>
+                    <div><img src="shield-account.svg" alt="privacy icon"></div>
                     <h6>Privacy</h6>
                 </div>
             </div>
@@ -57,18 +57,18 @@
         <div class="container-child2 header">
             <div class="header-child1">
                 <div class="search">
-                    <div class="search-icon">#</div> <!-- label element might be useful-->
+                    <div class="search-icon"><img src="magnify.svg" alt="search icon"></div> <!-- label element might be useful-->
                     <input type="text">
                 </div>
                 <div class="small-profile">
-                    <div class="bell">#</div>
-                    <div class="small-pic">#</div>
+                    <div class="bell"><img src="bell-ring-outline.svg" alt=""></div>
+                    <div class="small-pic"><img src="user.png" alt=""></div>
                     <div class="user">Rexx Alfaro</div>
                 </div>
             </div>
             <div class="header-child2">
                 <div class="user-info">
-                    <div class="profile-pic">#</div>
+                    <div class="profile-pic"><img src="user.png" alt=""></div>
                     <div class="user-greetings">
                         <p>Hi there,</p>
                         <div class="user">Rexx Alfaro (@snowfxl)</div>
@@ -91,42 +91,66 @@
                         <h6>Super Cool Project</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="card2 left-card">
                         <h6>Less Cool Project</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime dicta laborum porro odio sed!</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="card4 left-card">
                         <h6>Impossible App</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="card5 left-card">
                         <h6>Easy Peasy App</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="card6 left-card">
                         <h6>Ad Blocker</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="card7 left-card">
                         <h6>Money Maker</h6>
                         <div class="card-content">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta quisquam sed molestias ad possimus fugit.</p>
-                            <div class="card-icons">###</div>
+                            <div class="card-icons">
+                                <img src="star-plus-outline.svg" alt="">
+                                <img src="eye-plus-outline.svg" alt="">
+                                <img src="share-variant.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,28 +174,32 @@
                     <h6 class="trending">Trending</h6>
                     <div class="card8 right-card trending-card"><!-- item8 -->
                         <div class="trending-items">
-                            <div class="hero">#</div>
+                            <div class="hero"><img src="ichigo.jpeg" alt="">
+                            </div>
                             <div class="username">
                                 <p>@tegan</p>
                                 <p>World Peace Builder</p>
                             </div>
                         </div>
                         <div class="trending-items">
-                            <div class="hero">#</div>
+                            <div class="hero"><img src="luffy.png" alt="">
+                            </div>
                             <div class="username">
                                 <p>@tegan</p>
                                 <p>World Peace Builder</p>
                             </div>
                         </div>
                         <div class="trending-items">
-                            <div class="hero">#</div>
+                            <div class="hero"><img src="goku.jpg" alt="">
+                            </div>
                             <div class="username">
                                 <p>@tegan</p>
                                 <p>World Peace Builder</p>
                             </div>
                         </div>
                         <div class="trending-items">
-                            <div class="hero">#</div>
+                            <div class="hero"><img src="naruto.png" alt="">
+                            </div>
                             <div class="username">
                                 <p>@tegan</p>
                                 <p>World Peace Builder</p>
